SERVER-50293 TemporaryKVRecordStore should reset the _recordStoreHasBeenFinalized flags state on a WriteConflictException