src/mongo/db/storage/kv/temporary_kv_record_store.cpp
@@ -51,6 +51,13 @@ void TemporaryKVRecordStore::finalizeTemporaryTable(OperationContext* opCtx,
 
     _recordStoreHasBeenFinalized = true;
 
+    // This function is added as an onCommit() handler in certain places, at which point it is not
+    // possible to get a WriteConflictException. We're only concerned when calling this function in
+    // a WriteUnitOfWork that can still be rolled back.
+    if (opCtx->recoveryUnit()->inActiveTxn()) {
+        opCtx->recoveryUnit()->onRollback([this]() { _recordStoreHasBeenFinalized = false; });
+    }
+
     if (action == FinalizationAction::kKeep)
         return;
 
